--- a/src/scss/layouts/containers/_registration.scss
+++ b/src/scss/layouts/containers/_registration.scss
@@ -24,7 +24,9 @@
     margin-left: 60px;
 
     form {
-      @include flex-column-center;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
 
       h2 {
         font-size: 1.3em;
